# Data-Augmentation-Ollama

./: .gitignore  README.md  config.py  main.py  pyproject.toml  train.py
data/raw/: test.csv  train_full.csv
models/llama3.1-latest/restricted_10pct/model/: config.json
results/: finetuning_results.csv
results/stats/: augmented_vs_restricted.csv  ranking.csv  variation_across_ratios.csv
src/analysis/: stats.py
src/augmentation/: generator.py  merge.py  pipeline.py
src/data/: loader.py  restrictor.py
src/training/: dataset.py  finetune.py  pipeline.py
